--- a/homework-2/src/components/chart/Chart.css
+++ b/homework-2/src/components/chart/Chart.css
@@ -1,9 +1,11 @@
+
 .chart{
+    margin-top: 90px;
     padding: 1rem;
     border-radius: 12px;
-    background: #bad135;
+    background-color: #f8dFFF;
     text-align: center;
     display: flex;
     justify-content: space-around;
-    
+    height: 10rem;
 }
