--- a/homework-2/src/components/chart/ChartBar.css
+++ b/homework-2/src/components/chart/ChartBar.css
@@ -1,32 +1,31 @@
-.chart-bar {
-    height: 200px;
+.chart-bar{
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;  
-    background-color: #c3b4f3  
+    align-items: center;
 }
-.chart-bar__inner {
-    height: 550px;
-    width: 20px;
-    border: 1px solid #313131;
+
+.chart-bar__inner{
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
     border-radius: 12px;
-    background-color: #aca3cb;
+    background-color: #c3b4f3;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    border: none;
 }
 
-.chart-bar__fill {
-    background-color:#4826b9 ;
+.chart-bar__fill{
+    background-color: #4826b9;
     width: 100%;
-
+    transition: 0.4s ease-out;
 }
 
 .chart-bar__label{
     font-weight: bold;
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     text-align: center;
+    color: black;
 }
-
-
